# MUVA_IM

./: README.md
Material_P1/: dif_aniso.m
P1/: Practica 1.html  Practica1.ipynb  dif_aniso.py  ejer2.py  ejer3.py
P2/: P2_B1.fig  Practica2.html  Practica2.ipynb  ejer1.py  ejerC.m  ejerE.py
P2/MaterialP2/: Apartado2.m  EMSeg.m  P2_B1.fig  chanvese.m  chanvese_demo.m  hueso.tif
P2/MaterialP2/ASM/: FindShapeInImage.m  GetdX.m  PlotShapes.m  asm.m
P3/: Practica 3.html  memoria_P3.ipynb
P3/ejer/: CMakeLists.txt
P3/ejer/ejer3C/: CMakeLists.txt  ejer3C.py
P3/ejer/ejer3C/Resources/UI/: ejer3C.ui
P3/ejer2/: interpolation.py  mutual_info.py  optimization.py  rigid.py
